--- a/games/public.css
+++ b/games/public.css
@@ -100,6 +100,7 @@ nav ul li.btn:hover a {
 .content {
 
     padding-top: 140px;
+    margin-top: -100px;
 }
 
 .content .main-text {
@@ -207,4 +208,19 @@ nav ul li.btn:hover a {
     transform: scale(1.2);
     transition: .4s;
     color: white;
+}
+
+.image {
+
+    position: absolute;
+    width: 100%;
+    height: 85%;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+}
+
+.image img {
+
+    height: 100%;
 }
